--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,6 @@
 endblock %} {% block page_content %}
 <div class="page-header">
   <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
-  <h2>{% if email %} Your UofT email is {{ email }} {% else %} YYYYY {% endif %}</h2>
+  <h2>{% if email %} Your UofT email is {{ email }} {% else %}{% endif %}</h2>
 </div>
 {{ wtf.quick_form(form) }} {% endblock %}
