--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %} {% import "bootstrap/wtf.html" as wtf %} {% block title %}Flasky{%
 endblock %} {% block page_content %}
 <div class="page-header">
-  <h1>Hello {% if name %}{{ name }}! {% else %} Stranger! {% endif %} Welcome to PRA2 Docker!</h1>
-  <h2>
-    {% if email_error %} {{ email_error }} {% else %} Your UofT email is {{ email }} {% endif %}
-  </h2>
+  <h1>Hello, {% if name %}{{ name }}!{% else %} Stranger! {% endif %} Welcome to PRA2 Docker!</h1>
+  <h2>{% if email %} {{ email }} {% endif %}</h2>
 </div>
 {{ wtf.quick_form(form) }} {% endblock %}
